--- a/slim/index.slim
+++ b/slim/index.slim
@@ -17,6 +17,7 @@ html
       a.menu-item v-on:click="download_tex" Download .tex
       a.menu-item v-on:click="download_tex_snippet" Download .tex (Snippet)
       a.menu-item v-on:click="download_html" Download .html
+      a.menu-item v-on:click="print" Print
       a.menu-item v-on:click="about" About
     textarea#section-editor
 
