--- a/slim/index.slim
+++ b/slim/index.slim
@@ -2,6 +2,7 @@ html
   head
     link rel="stylesheet" href="css/codemirror.css"
     link rel="stylesheet" href="css/style.css"
+    link rel="stylesheet" href="css/render_style.css"
     script src="js/codemirror.js"
     script src="js/vue.min.js"
     script src="js/script.js"
